src/components/blocks/object-image-overlay/_object-image-overlay.scss
.b-object-image-overlay {
  display: none;
  
  &--active {
    animation: opacityFadeIn .2s;
    background-color: rgba(29, 30, 32, .98);
    display: block;
    height: 100%;
    left: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 9999;
  }

  &__dismiss {
    color: #fff;
    cursor: pointer;
    display: block;
    height: 30px;
    margin: 10px;
    position: absolute;
    right: 0;
    top: 0;
    width: 30px;
    z-index: 1;

    &::before,
    &::after {
      background: #fff;
      content: '';
      height: 100%;
      margin: auto;
      position: absolute;
      right: 50%;
      top: 50%;
      transform: translate(-50%, -50%) rotate(45deg);
      width: 2px;
    }

    &::after {
      transform: translate(-50%, -50%) rotate(-45deg);
    }
  }

  &__items {
    height: 100%;
    padding: 50px 0 0;
    position: relative;
    width: 300vw;

    @include bpMinMedium {
      padding: 0;
    }

  }

  &__item {
    display: inline-flex;
    float: left;
    height: 100%;
    justify-content: space-around;
    width: 100vw;
  }

  &__content {
    color: #fff;
    height: 100%;
    margin: auto 10px;
    overflow: auto;
    position: relative;

    @include bpMinMedium {
      display: flex;
      flex-grow: 1;
      height: 100%;
      margin: auto;
      max-height: 800px;
      max-width: 1200px;
    }
  }

  &__figure {
    display: inline-flex;
    flex-direction: column;
    justify-content: space-between;

    @include bpMinMedium {
      background: #292a2b;
      padding: 32px 60px;
      width: 65%;
    }
  }    

  &__image {
    margin: auto;
    max-height: calc(100vh - 200px);
    max-width: 100%;

    @include bpMinMedium {
      max-height: 85%;
    }
  }

  &__figcaption {
    @include typeSetting(2, regular);
    border: solid siteColor(vam-grey-3);
    border-width: 0 0 1px;
    display: flex;
    line-height: 1.7;
    padding: 8px 60px 8px 0;

    @include bpMinMedium {
      border-width: 1px 0 0;
      margin-top: 50px;
      padding: 4px 0 0;
    }
  }    

  &__prevnext {
    display: none;

    @include bpMinMedium {
      display: block;
      flex: 1 0 auto;
      text-align: right;
    }
  }

  &__prev,
  &__next {
    border: 1px solid #fff;
    border-radius: 100%;
    color: #fff;
    cursor: default;
    display: inline-flex;
    height: 30px;
    margin: 10px 0 10px 10px;
    opacity: .4;
    width: 30px;

    svg {
      height: 12px;
      margin: auto;
      width: 12px;
    }

    &--enabled {
      cursor: pointer;
      opacity: 1;

      &:hover,
      &:focus {
        background: #ffffff1a;
      }
    }
  }

  &__next {
    margin-left: 10px;
    padding-left: 2.5px;
  }

  &__details {
    @include bpMinMedium {
      background: #393b3f;
      display: inline-flex;
      flex-direction: column;
      flex-grow: 1;
      height: 100%;
      justify-content: space-between;
      position: absolute;
      right: 0;
      top: 0;
      width: 35%;
    }
  }    

  &__caption {
    @include typeSetting(3, regular);
    display: block;
    line-height: 1.56;
    max-width: 600px;
    padding: 15px 0 12px;

    @include bpMinMedium {
      @include typeSetting(4, regular);
      line-height: 1.56;
      padding: 30px;
    }
  }

  &__cta {
    color: siteColor(vam-grey-5);
    position: relative;
    text-decoration: none;

    &--mobile {
      @include typeSetting(1, bold, uppercase);
      border: 1px solid #fff;
      border-radius: 2px;
      display: inline-block;
      margin: 22px 0;
      padding: 8px 24px 6px 12px;

      @include bpMinMedium {
        display: none;
      }
    }

    &--screen {
      @include typeSetting(2, regular);
      border: 1px solid siteColor(vam-grey-3);
      border-width: 0 0 1px;
      display: block;
      margin: 0;
      padding: 15px 0 10px;

      @include bpMaxMedium {
        display: none;
      }
    }

    &:hover,
    &:focus {
      border-color: #fff;
      color: #fff;
    }

    &::after {
      content: '►';
      display: inline-block;
      font-size: 11px;
      position: absolute;
      right: 10px;
      top: 26%;
      transform: scale(.5, .9);

      @include bpMinMedium {
        margin: 4px 0 0 6px;
        right: auto;
      }
    }
  }

  &__location {
    @include bpMinMedium {
      background: #505054;
      padding: 35px 30px;
      position: relative;
    }
  }    

  &__location-status {
    @include typeSetting(3, regular);
    display: inline;

    &::after {
      content: ' at ';
    }
      
    svg {
      display: none;
    }

    @include bpMinMedium {
      @include typeSetting(0, bold, uppercase);
      background-color: siteColor(vam-grey-5);
      color: siteColor(vam-black);
      display: flex;
      left: 0;
      padding: 3px 10px 2px 7px;
      position: absolute;
      top: 0;

      &::after {
        display: none;
      }

      svg {
        display: block;
        height: 16px;
        margin-right: 6px;
        width: 16px;
      }
    }
  }    

  &__location-copy {
    @include typeSetting(3, regular);
    display: inline-block;
    margin: 0 0 14px;

    @include bpMinMedium {
      display: block;
      margin: 0 0 7px;
    }
  }

  &__location-site {
    display: inline;

    &::after {
      content: ', ';
    }

    @include bpMinMedium {
      @include typeSetting(3, bold);
      display: block;
      margin: 0 0 7px;

      &::after {
        display: none;
      }
    }
  }

  &__visit {
    @include typeSetting(3, regular);
    display: block;
    text-decoration: underline;
  }
}

